--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,11 @@ ul {list-style: none;}
     height: 3px !important;
     background: var(--grisOscuro);
 }
+.hr-white {
+    opacity: 1;
+    height: 3px !important;
+    background: white;
+}
 /* BG Colors */
 .bg-gris {background: var(--gris);}
 .bg-naranja {background: var(--naranja);}
@@ -842,10 +847,10 @@ button.switch-month:hover svg path {fill: var(--amarillo);}
         box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.5);
 }
 .box-multimedia-podcast {
-    border-radius: 30px;
+    border-radius: 20px;
 }
 .box-multimedia-podcast img {
-    border-radius: 30px 0 0 30px;
+    border-radius: 0 20px 20px 0;
     width: 400px;
 }
 footer h1 {
