--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,6 +91,7 @@ a:hover {color: var(--amarillo);}
 }
 ul {list-style: none;}
 /* Utilities */
+.z-1 {z-index: 1;}
 .br-10 {border-radius: 10px;}
 .br-30 {border-radius: 30px;}
 .pt-50 {padding-top: 50px;}
@@ -727,6 +728,13 @@ button.switch-month:hover svg path {fill: var(--amarillo);}
 #suscriptions a:hover svg path {fill: var(--amarillo);}
 
 /* Page Somos */
+#team .img {
+    top: 30%;
+    left: -10%;
+    z-index: -1;
+    position: absolute;
+    
+}
 .box-team {
     cursor: pointer;
     padding: 40px 20px;
@@ -794,12 +802,13 @@ button.switch-month:hover svg path {fill: var(--amarillo);}
     overflow: hidden;
     position: relative;
 }
-#video .box-multimedia img {border-radius: 20px 20px 0 0;}
 #video .header-box {
     height: 300px;
     overflow: hidden;
 }
 
+#video .header-box .lottie-player {
+    position: absolute;}
 .card-ticket {
     height: 100%;
     background: linear-gradient(to bottom, var(--naranja) 0%, var(--naranja) 26%, #ecedef 26%, #ecedef 100%);
@@ -907,12 +916,15 @@ footer ul a:hover {color: var(--amarillo);}
 }
 
 
-  /* https://codepen.io/Taimoorkhan/pen/LYNbBRV */
-
-  
-
 .bg-03-notas {
     top:  -190px;
     left: -50px;
+    position: absolute;
+}
+
+.bg-01-notas {
+    top: 50%;
+    right: -400px;
+    z-index: -1;
     position: absolute;
 }
