--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -896,6 +896,14 @@ button.switch-month:hover svg path {fill: var(--amarillo);}
     position: absolute;
 }
 
+#noticias {
+    background: url(../img/bg-01.svg) top right no-repeat;
+}
+
+#noticias img {
+    border-radius: 30px;
+}
+
 footer h1 {
     font-size: 24px;
     text-transform: uppercase;
@@ -903,7 +911,7 @@ footer h1 {
 footer ul a {text-decoration: none;}
 footer ul a:hover {color: var(--amarillo);}
 
-@media only screen and (max-width: 767px) {
+    @media only screen and (max-width: 767px) {
     h1 {font-size: 32px;}
     h2 {font-size: 28px;}
     h3 {font-size: 22px;}
